--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: sads
 Type: Package
 Title: Maximum Likelihood Models for Species Abundance Distributions
-Version: 0.2.1
-Date: 2015-06-12
+Version: 0.2.2
+Date: 2015-07-11
 Author: Paulo I. Prado, Murilo Dantas Miranda and Andre Chalom
 Maintainer: Paulo I. Prado <prado@ib.usp.br>
-Depends: stats, bbmle, poilog
-Imports: MASS, methods, graphics, VGAM, GUILDS
+Depends: stats, bbmle
+Imports: MASS, methods, graphics, grDevices, VGAM, poilog, GUILDS
 Suggests: vegan
 Description: Maximum likelihood tools to fit and compare models of species
     abundance distributions and of species rank-abundance distributions.
@@ -16,6 +16,6 @@ Encoding: UTF-8
 URL: http://piklprado.github.io/sads, https://github.com/piklprado/sads
 BugReports: https://github.com/piklprado/sads/issues
 NeedsCompilation: yes
-Packaged: 2015-06-15 20:11:19 UTC; chalom
+Packaged: 2015-07-11 15:14:25 UTC; chalom
 Repository: CRAN
-Date/Publication: 2015-06-16 00:29:06
+Date/Publication: 2015-07-12 01:49:52
