--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,18 +19,20 @@ export(fitrad, fitsad, octav, octavpred, radpred, pprad, ppsad, qqrad, qqsad, ra
 export(plotprofmle, pred.logser, dtrunc, ptrunc, qtrunc, rsad, updatesad, updaterad)
 ## Explicit classes and methods export
 exportClasses(rad, octav, fitsad, fitrad)
-exportMethods(plot, points, lines, octavpred, radpred, qqsad, qqrad)
+exportMethods(plot, points, lines, octavpred, radpred, qqsad, qqrad, plotprofmle)
 # Methods that override bbmle counterparts:
 exportMethods(show, nobs, AIC, AICc)
 ## IMPORTS ##
 ## Import specific functions from other packages used by new methods
-importFrom("graphics", plot, points, lines)
+importFrom("graphics", plot, points, lines, abline, axis, hist, par)
+importFrom("grDevices", axisTicks, dev.interactive, devAskNewPage)
 #importFrom("bbmle", AICc)
 ## Import a single function from VGAM and GUILDS
 importFrom("VGAM",zeta)
 importFrom("GUILDS", maxLikelihood.ESF)
 ## Import all packages listed as Imports or Depends
 import(
+    stats,
     methods,
     MASS,
     bbmle,
